--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
 /* Write your CSS here! */
+body{
+        margin:8px;
+        display:block;
+    }
+#mainHeading{color:red;}
+
+.funParagraph{color:green;background-color:yellow;}
